# frugaled

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  default.nix  dev.Dockerfile  docker-compose.override.yml  docker-compose.yml  frugaled.cabal  frugaled.nix  stack.yaml
.direnv/: cache-.2555.41dddb12837  drv
sql/: 0.tables.sql  1.seed.sql  init.sql
