cabal-version:       3.0
name:                frugaled
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:            AGPL-3.0-only
-- license-file:        LICENSE
-- author:
-- maintainer:
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

executable frugaled
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.13 && <5, discord-haskell, postgresql-simple
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror